demo example update

--- a/examples/simple-demo.html
+++ b/examples/simple-demo.html
@@ -8,25 +8,21 @@
 
 	<style>
 		body {
-			background: #123;
+			background: #E7EBF0;
 		}
 		h1,h2,h3 {
-			color: #369;
+			color: #2A77DB;
 		}
 		.wrapper {
 			width: 400px;
 			padding: 20px;
-			margin: 0 auto;
-			background: #fff;
-			box-shadow: 0 0 10px #000;
+			margin: 20px auto;
+			background: #FFFFFF;
+			box-shadow: 0 10px 50px rgba(0, 0, 0, 0.5);
 		}
 		.block-with-lionbars {
 			height: 600px;
 			overflow: auto;
-		}
-		.lb-v-scrollbar-slider,
-		.lb-h-scrollbar-slider {
-			background: #369;
 		}
 	</style>
 	<script>
@@ -37,7 +33,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<h1>Demo !</h1>
+		<h1>Github, from Wikipedia</h1>
 		<div class="block-with-lionbars">
 			<p>GitHub is a web-based hosting service for software development projects that use the Git revision control system. GitHub offers both commercial plans and free accounts for open source projects. According to the Git User's Survey in 2009, GitHub is the most popular Git hosting site.[3]</p>
 
